prevent mid-repo breaks on team page

--- a/themes/vue/source/css/_team.styl
+++ b/themes/vue/source/css/_team.styl
@@ -51,6 +51,7 @@
           content: ' '
           margin-top: .6em
       li
+        display: inline-block
         &::after
           content: ' · '
           margin: 0 4px
